Fix Phase1 Stage1 identity, media moderation, and email-verification backend defects.
Drop consent save gate for Phase 1, support identity document fields and preferred locations, stream admin media without loading blobs, add video Range playback, and complete contact verification after email OTP.

Co-authored-by: Cursor <cursoragent@cursor.com>